Github token commented

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -58,7 +58,7 @@ jobs:
           - ✅ Sistema de estadísticas verificado
           
           🎉 El código está listo para ser integrado a la rama main.
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
     # Comentario final de fallo
     - name: Comment PR - Failure
@@ -74,4 +74,4 @@ jobs:
           - Corrige los errores antes de hacer merge a main
           
           🔧 Por favor, revisa el código y ejecuta las pruebas localmente antes de hacer push.
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
