Workflow updated to include job for deploy

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,7 +1,9 @@
-name: CI/CD Medical Model Tests
+name: CI/CD Medical Model Pipeline
 
 on:
   pull_request:
+    branches: [ main ]
+  push:
     branches: [ main ]
 
 jobs:
@@ -58,7 +60,7 @@ jobs:
           - ✅ Sistema de estadísticas verificado
           
           🎉 El código está listo para ser integrado a la rama main.
-        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
     # Comentario final de fallo
     - name: Comment PR - Failure
@@ -74,4 +76,71 @@ jobs:
           - Corrige los errores antes de hacer merge a main
           
           🔧 Por favor, revisa el código y ejecuta las pruebas localmente antes de hacer push.
-        #GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # Job para deploy cuando se hace push/merge a main
+  deploy:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: test
+    
+    steps:
+    # Checkout del código
+    - uses: actions/checkout@v4
+    
+    # Configurar Python para pruebas finales
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
+    
+    # Instalar dependencias
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    
+    # Ejecutar pruebas finales en main
+    - name: Run final tests on main
+      run: |
+        echo "🧪 Ejecutando pruebas finales en la rama main..."
+        pytest test_app.py -v --tb=short
+        echo "✅ Todas las pruebas finales pasaron correctamente"
+    
+    # Configurar Docker Buildx
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    # Login a GitHub Container Registry
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    
+    # Construir y publicar imagen Docker
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: |
+          ghcr.io/${{ github.repository }}:latest
+          ghcr.io/${{ github.repository }}:${{ github.sha }}
+        labels: |
+          org.opencontainers.image.title=Medical Model MLOps
+          org.opencontainers.image.description=Servicio médico de diagnóstico con ML simulado
+          org.opencontainers.image.url=${{ github.server_url }}/${{ github.repository }}
+          org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+          org.opencontainers.image.version=${{ github.sha }}
+          org.opencontainers.image.created=${{ github.event.head_commit.timestamp }}
+          org.opencontainers.image.revision=${{ github.sha }}
+    
+    # Notificación de éxito
+    - name: Deployment Success Notification
+      run: |
+        echo "🚀 ¡Despliegue completado exitosamente!"
+        echo "📦 Imagen Docker publicada en: ghcr.io/${{ github.repository }}:latest"
+        echo "🏷️  También disponible como: ghcr.io/${{ github.repository }}:${{ github.sha }}"
+        echo "✅ El servicio médico está listo para usar"
